kube-config/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      components: backend
  template:
    metadata: 
      labels:
        components: backend
    spec: 
      containers:
        - name: short-api
          image:  antonlarichev/short-api:v1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu:  "500m"
