kube-config/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      components: postgres
  template:
    metadata: 
      labels:
        components: postgres
    spec: 
      containers:
        - name: postgres-app
          image:  antonlarichev/conv-app:1.2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "300Mi"
              cpu:  "500m"
