kube-config/rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      components: rmq
  template:
    metadata: 
      labels:
        components: rmq
    spec: 
      containers:
        - name: rmq-app
          image:  rabbitmq:3.12.13
          ports:
            - containerPort: 5672
          resources:
            limits:
              memory: "300Mi"
              cpu:  "500m"
          volumeMounts:
            - name: rmq-data
              mountPath: /var/lib/rabbitmq/
      volumes:
        - name: rmq-data
          persistentVolumeClaim:
            claimName: rmq-pvc
