kube-config/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-api-clusterip
spec:
  type: ClusterIP
  selector:
    components: backend
  ports:
  - port: 3000
    protocol: TCP
