kube-config/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-port
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31200
  selector:
    components: frontend
