kube-config/rmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq-clusterip
spec:
  type: ClusterIP
  selector:
    components: postgres
  ports:
  - port: 5672
    protocol: TCP
